# modules/apps/headless/headless-admin-workflow/headless-admin-workflow-impl/rest-openapi.yaml
@@ -273,6 +273,10 @@ components:
                     format: int64
                     readOnly: true
                     type: integer
+                workflowDefinitionExternalReferenceCode:
+                    description:
+                        The external reference code of the instance's workflow definition.
+                    type: string
                 workflowDefinitionName:
                     description:
                         The name of the instance's workflow definition.
@@ -699,6 +703,32 @@ info:
     version: v1.0
 openapi: 3.0.1
 paths:
+    "/workflow-definition-links":
+        get:
+            operationId: getWorkflowDefinitionLinksPage
+            parameters:
+                -   in: query
+                    name: page
+                    schema:
+                        type: integer
+                -   in: query
+                    name: pageSize
+                    schema:
+                        type: integer
+            responses:
+                200:
+                    content:
+                        application/json:
+                            schema:
+                                items:
+                                    $ref: "#/components/schemas/WorkflowDefinitionLink"
+                                type: array
+                        application/xml:
+                            schema:
+                                items:
+                                    $ref: "#/components/schemas/WorkflowDefinitionLink"
+                                type: array
+            tags: ["WorkflowDefinitionLink"]
     "/workflow-definition-links/by-external-reference-code/{externalReferenceCode}":
         put:
             operationId: putWorkflowDefinitionLinkByExternalReferenceCode
